[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/Player.png" type="Texture" id=1]
[ext_resource path="res://Textures/Director.png" type="Texture" id=2]
[ext_resource path="res://ShootDirector.gd" type="Script" id=3]
[ext_resource path="res://PlayerGrazeArea.gd" type="Script" id=4]
[ext_resource path="res://Player.gd" type="Script" id=5]
[ext_resource path="res://Star.tscn" type="PackedScene" id=6]
[ext_resource path="res://HitEffect.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=3]
radius = 8.0

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 2.0

[sub_resource type="CircleShape2D" id=5]
radius = 25.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( 68, 120 )
collision_mask = 16
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
star_scene = ExtResource( 6 )
hit_scene = ExtResource( 7 )

[node name="PlayerCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="PlayerAnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="ShootDirector" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 17, 0 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="PlayerLife" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerLife"]
shape = SubResource( 4 )

[node name="PlayerGrazeArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGrazeArea"]
shape = SubResource( 5 )

[node name="ShootWaitTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="ShootCoolTimeTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="PlayerLife" to="." method="_on_PlayerLife_body_entered"]
[connection signal="body_entered" from="PlayerGrazeArea" to="PlayerGrazeArea" method="_on_PlayerGrazeArea_body_entered"]
[connection signal="body_exited" from="PlayerGrazeArea" to="PlayerGrazeArea" method="_on_PlayerGrazeArea_body_exited"]
[connection signal="timeout" from="ShootWaitTimer" to="." method="_on_ShootWaitTimer_timeout"]
